sugar/tests/fail/bang3.mx
a : 1, u : _|_ |-
let a' = alias a in
ignore a in
ignore a' in
u
